--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,8 @@ on:
 
 jobs:
   build:
-
-    runs-on: github-local-runner
-
+    runs-on: 
+      labels: e95441-runner
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
