--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,8 +16,7 @@ on:
 
 jobs:
   build:
-    runs-on: 
-      labels: e95441-runner
+    runs-on: github-local-runner
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
