--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,12 +17,12 @@ on:
 jobs:
   build:
     runs-on: github-local-runner
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        cache: 'maven'
-    - name: Build with Maven
-      run: mvn clean compile
+steps:
+- uses: actions/checkout@v3
+- uses: actions/setup-java@v3
+  with:
+    distribution: 'temurin'
+    java-version: '17'
+    cache: 'maven'
+- name: Build with Maven
+  run: mvn -B package --file pom.xml
