--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
+        distribution: 'corretto'
         java-version: '17'
         cache: 'maven'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - run: mvn -B package --file pom.xml
