--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,9 +19,7 @@ jobs:
     runs-on: github-local-runner
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - uses: stCarolas/setup-maven@v4.5
       with:
-        distribution: 'corretto'
-        java-version: '17'
-        cache: 'maven'
+        maven-version: 3.8.2
     - run: mvn -B package --file pom.xml
