--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,11 @@ jobs:
     runs-on: github-local-runner
     steps:
     - uses: actions/checkout@v3
-    - uses: stCarolas/setup-maven@v4.5
+    - uses: actions/setup-java@v3
       with:
-        maven-version: 3.8.2
-    - run: mvn -B package --file pom.xml
+        distribution: 'corretto'
+        java-version: '17'
+        cache: 'maven'
+    - uses: s4u/setup-maven-action@3.9.4
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
