--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,5 +25,7 @@ jobs:
         java-version: '17'
         cache: 'maven'
     - uses: s4u/setup-maven-action@3.9.4
+      with: 
+        maven-version: '3.9.4'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - run: mvn clean compile
