--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,14 +18,14 @@ jobs:
   build:
     runs-on: github-local-runner
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'corretto'
-        java-version: '17'
-        cache: 'maven'
-    - uses: s4u/setup-maven-action@3.9.4
-      with: 
-        maven-version: '3.9.4'
     - name: Build with Maven
+      uses: actions/checkout@v3
+      uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+          cache: 'maven'
+      uses: s4u/setup-maven-action@3.9.4
+        with: 
+          maven-version: '3.9.4'
     - run: mvn clean compile
