--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
         cache: 'maven'
-    - uses: s4u/setup-maven-action@< version >
+    - uses: s4u/setup-maven-action@3.9.4
       with:
         maven-version: '3.9.4'
     - name: Build with Maven
