--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,8 +24,6 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
         cache: 'maven'
-    - uses: thermofisher/setup-maven@v1.0.0
-      with:
-        maven-version: '3.9.4'
+    - uses: yuzhiyongcn/setup-maven@v1.0.0
     - name: Build with Maven
       run: mvn clean compile
